--- a/nodepi/views/index.jade
+++ b/nodepi/views/index.jade
@@ -1,5 +1,19 @@
+
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    h1= title
+    p Aprendendo Node e mais umas coisas
+
+    
+    #wrapper
+
+        
+        h2 Lista de Usuários
+        #userList
+            table
+                thead
+                    th Usuário
+                    th Email
+                    th Deletar?
+                tbody
